apps/test-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  namespace: default
  labels:
    app: test-client
spec:
  containers:
  - name: client
    image: curlimages/curl
    command: ["sleep", "3600"]
